# ocamlDataMunging

./: opamgen.sh
json/: .merlin  build_json.ml  dune  read_inline.ml
regex/: dune  pcre_pmatch.ml
scripts/strings/: conv_to_int.ml  strings.ml
sexpr/: .merlin  create_sexp.ml  dune  gen_sexp.ml  in_interval.ml  in_interval.mli  in_interval_test.ml
